# ChangeLog for www-servers/nginx
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.28 2005/05/29 14:30:28 voxus Exp $

  29 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.28-r2.ebuild,
  -nginx-0.1.33-r1.ebuild, files/nginx, files/nginx.conf, nginx-0.1.34.ebuild:
  Forcing 0.1.34 stable on x86 and amd64. Added checkconf to start/stop/reload
  in init-script. Fixed default configuration.

*nginx-0.1.34 (27 May 2005)

  27 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.34.ebuild:
  Version bump, should go stable within next week.

*nginx-0.1.33-r1 (26 May 2005)

  26 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.33-r1.ebuild,
  +files/nginx-0.1.33-large_ssi_includes.patch,
  +files/nginx-0.1.33-set_header_range.patch, -nginx-0.1.33.ebuild:
  Fix against infinitive cycle in large ssi includes and ability to set Range
  header. Patches provided by author.

  24 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.29-r2.ebuild,
  -nginx-0.1.30-r1.ebuild, -nginx-0.1.31.ebuild, -nginx-0.1.32.ebuild,
  -files/nginx-0.1.30-slashless_path.patch:
  Cleaned out old ebuilds.

*nginx-0.1.33 (23 May 2005)

  23 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.33.ebuild:
  Version bump.

*nginx-0.1.32 (19 May 2005)

  19 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.32.ebuild:
  Version bump.

*nginx-0.1.31 (16 May 2005)

  16 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.31.ebuild:
  Version bump. Added pcre use flag.

*nginx-0.1.30-r1 (15 May 2005)

  15 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.30.ebuild,
  +files/nginx-0.1.30-slashless_path.patch, +nginx-0.1.30-r1.ebuild:
  Added slashless path patch from author.

*nginx-0.1.30 (15 May 2005)

  15 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.30.ebuild:
  Version bump.

*nginx-0.1.29-r2 (14 May 2005)
