@@ -1,6 +1,8 @@
+MD5 8ddfe7b55cfbec2a905518dc65ef21b6 nginx-0.1.35.ebuild 2075
 MD5 114f655395217d77dfab2e257cdd9fe4 nginx-0.1.34.ebuild 2073
-MD5 ab240be59f24a6af0177b8937cd2a346 ChangeLog 5223
+MD5 d22e4f0726d67df783915f876bfa733c ChangeLog 5345
 MD5 822f3c821527e6a34f23a6a92a884766 metadata.xml 220
 MD5 b4e5149fed4a89f9561a32a8245dd1a7 files/digest-nginx-0.1.34 64
+MD5 ec8d24578f3f015eabf58f8bef4bb939 files/digest-nginx-0.1.35 64
 MD5 d8f7e621e098b58848a6b5fb045c49c3 files/nginx 994
 MD5 fecedd05099122b1f8169152e5bc9462 files/nginx.conf 1400
