@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.28 2005/05/29 14:30:28 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.29 2005/06/07 16:14:57 voxus Exp $
+
+*nginx-0.1.35 (07 Jun 2005)
+
+  07 Jun 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.35.ebuild:
+  Version bump.
 
   29 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.28-r2.ebuild,
   -nginx-0.1.33-r1.ebuild, files/nginx, files/nginx.conf, nginx-0.1.34.ebuild:
